--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
-<html>
-    <head>
-        
-    </head>
-    <body>
-        
+<!DOCTYPE html>
+<html lang="pt-br">
 
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dev.finace$</title>
+</head>
+
+<body>
+    <h1>dev.finance$</h1>
+
+    <h2>Balanço</h2>
+
+    <h3>Entradas</h3>
+    <p>5.000,00</p>
+
+    <h3>Saídas</h3>
+    <p>2.000,00</p>
+
+    <h3>Total</h3>
+    <p>3.000,00</p>
+
+    <h2>Transações</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Descição</th>
+                <th>Valor</th>
+                <th>Data</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Luz</td>
+                <td>- 500,00</td>
+                <td>23/01/2021</td>
+            </tr>
+            <tr>
+                <td>Criação Website</td>
+                <td>- 5000,00</td>
+                <td>25/01/2021</td>
+            </tr>
+            <tr>
+                <td>Internet</td>
+                <td>- 80,00</td>
+                <td>22/01/2021</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <footer><p>dev.finance$</p></footer>
+
+</body>
+
 </html>
