--- a/index.html
+++ b/index.html
@@ -4,53 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,400;1,700&display=swap"
+        rel="stylesheet">
+
     <title>dev.finace$</title>
 </head>
 
 <body>
-    <h1>dev.finance$</h1>
+    <header>
+        <h1 id="logo">dev.finance$</h1>
+    </header>
 
-    <h2>Balanço</h2>
+    <main class="container">
+        <section id="balance">
+            <h2>Balanço</h2>
 
-    <h3>Entradas</h3>
-    <p>5.000,00</p>
+            <div class="card">
+                <h3>Entradas</h3>
+                <p>5.000,00</p>
+            </div>
+            <div class="card">
+                <h3>Saídas</h3>
+                <p>2.000,00</p>
+            </div>
+            <div class="card total">
+                <h3>Total</h3>
+                <p>3.000,00</p>
+            </div>
 
-    <h3>Saídas</h3>
-    <p>2.000,00</p>
+        </section>
 
-    <h3>Total</h3>
-    <p>3.000,00</p>
+        <section id="transaction">
+            <h2>Transações</h2>
 
-    <h2>Transações</h2>
+            <table id="data-table">
+                <thead>
+                    <tr>
+                        <th>Descrição</th>
+                        <th>Valor</th>
+                        <th>Data</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="description">Luz</td>
+                        <td class="expense">- 500,00</td>
+                        <td class="date">23/01/2021</td>
+                    </tr>
+                    <tr>
+                        <td>Criação Website</td>
+                        <td class="income">5.000,00</td>
+                        <td class="date">25/01/2021</td>
+                    </tr>
+                    <tr>
+                        <td class="description">Internet</td>
+                        <td class="expense">- 80,00</td>
+                        <td class="date">22/01/2021</td>
+                    </tr>
+                </tbody>
+            </table>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Descição</th>
-                <th>Valor</th>
-                <th>Data</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Luz</td>
-                <td>- 500,00</td>
-                <td>23/01/2021</td>
-            </tr>
-            <tr>
-                <td>Criação Website</td>
-                <td>- 5000,00</td>
-                <td>25/01/2021</td>
-            </tr>
-            <tr>
-                <td>Internet</td>
-                <td>- 80,00</td>
-                <td>22/01/2021</td>
-            </tr>
-        </tbody>
-    </table>
+        </section>
+    </main>
 
-    <footer><p>dev.finance$</p></footer>
+    <footer>
+        <p>dev.finance$</p>
+    </footer>
 
 </body>
 
